# docker-pretty-ps

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  docker-pretty-ps  setup.cfg  setup.py
dockerprettyps/: __init__.py  errors.py
install/: install-update.sh
src/dockerprettyps/: __init__.py  errors.py
tests/: test_dockerprettyps.py
tests/data/: cli_args.py  docker_ps.py  docker_ps_data.py  docker_ps_data_health.txt  ps_data_regs.txt
