[metadata]
# replace with your username:
name = docker-pretty-ps
version = 1.0.32
author = Alix Fullerton
author_email = fullertonalix0@gmail.com
description = CLI tool for docker ps reading in a pretty format
long_description = file: README.md
long_description_content_type = text/markdown
scripts=['src/dockerprettyps/bin/docker-pretty-ps'],
url = https://github.com/politeauthority/docker-pretty-ps
project_urls =
    Bug Tracker = https://github.com/politeauthority/docker-pretty-ps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
